@@ -184,8 +184,9 @@ Theory)}
   \item{type}{type of plot to view; can be \code{'info'} to
   show the test information function, \code{'infocontour'}
   for the test information contours, \code{'SE'} for the
-  test standard error function, or \code{'trace'} for all
-  item trace lines (only available when all items are
+  test standard error function, and \code{'trace'} and
+  \code{'infotrace'} for all item probability information
+  or trace lines (only available when all items are
   dichotomous)}
 
   \item{theta_angle}{numeric values ranging from 0 to 90
